# Mining-Guardian

./: .coverage  .env.example  .gitignore  AI_ROADMAP.md  AMS_API.md  AURADINE_API.md  CAPABILITIES.md  CLAUDE.md  CLAUDE.md.backup_d1_20260414_095940  CONTAINER_MONITORING.md  DEPLOYMENT_CHECKLIST.md  Makefile  NEXT_SESSION.md  PROFILE_MAP_QUESTIONS.md  README.md  README.md.rtf  REPAIR_LOG.md  SESSION_COMPLETE.md  WHATSMINER_API.md  ams_auth_test.py  approval_api.py  auradine_client.py  catalog_known_models.txt  com.bixbit.mining-guardian.plist  combine_knowledge.py  dashboard_api.py  deep_analysis_claude.py  export_knowledge.py  facility_monitor.py  grafana_summary.db  guardian.sqbpro  hashrate_evaluation.py  hvac_client.py  immersion_client.py  knowledge_backup.json  knowledge_manager.py  llm_analyzer.py  miner_specs.json  miner_verify.py  mining_guardian.py  (+16 more)
.claude/: WORKFLOW.md  config.local.example.json  config.schema.json  settings.json
ai/: action_diversity.py  ai_score.py  backup_knowledge.py  catalog_context.py  claude_deep_dive.py  claude_log_comparison.py  cohort_analyzer.py  combine_knowledge.py  combine_knowledge.py.backup_cq20_20260414_101141  comprehensive_audit.py  confidence_scorer.py  daily_deep_dive.py  daily_deep_dive.py.backup_1776156268  daily_deep_dive.py.backup_cq20_20260414_101141  deep_analysis_claude.py  export_knowledge.py  fast_analysis.py  fingerprint_builder.py  hvac_correlator.py  insight_filter.py  insight_manager.py  knowledge_manager.py  llm_scan_hook.py  local_llm_analyzer.py  local_llm_analyzer.py.backup_cq20_20260414_101141  (+9 more)
(+1107 files in other folders)
